--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Inspired by James 1:25 — …and looks intently into the perfect law that gives freedom" — BirdEye Bible is your gateway to a theologically rich, interactive Bible experience"
-    />
+   <meta
+  name="description"
+  content="Inspired by James 1:25 — …and looks intently into the perfect law that gives freedom — BirdEye Bible is your gateway to a theologically rich, interactive Bible experience"
+/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
